[package]
name = "lev"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
